# llm-xml-transformer

./: .gitignore  .gitmodules  README.md  main.py  package.json  package_setup.py  pyproject.toml  requirements.txt  xml_transformer.py
node/: .env.template  app.ts  package-lock.json  package.json  tsconfig.json
node/puppeteer/: browser.ts  page.ts
prompt/: __init__.py
python/: __init__.py  config.py  main.py  process.py
python/services/: __init__.py  llm_processor.py  xml_processor.py
services/: xml_processor.py
